# Pytoon

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_local.py
config/: defaults.yaml  engine.yaml  presets.yaml
docs/: add-comfyui-workflow.md  add-engine-adapter.md  add-preset.md  api-reference.md  deployment-guide.md  local-setup.md  runbooks-v2.md  runbooks.md  v2-api-reference.md
docs/specs/: archetypes.md  audio-caption-manager-v2.md  brand-safe-v2.md  brand-safe.md  engine-policy.md  hybrid-engine-strategy-v2.md  input-validation.md  output-contract-v2.md  output-contract.md  phase1-exit.md  phase1-v2-exit.md  phase2-exit.md  phase2-v2-exit.md  phase3-exit.md  phase3-v2-exit.md  phase4-exit.md  phase4-v2-exit.md  phase5-exit.md  phase5-v2-exit.md  presets.md  renderspec-v1.md  scene-planner-v2.md  v1-scope.md  v2-architecture.md  v2-migration-plan.md
docs/vision/: pytoon-v1.md  pytoon-v2.md
pytoon/: __init__.py  config.py  db.py  log.py  metrics.py  models.py  queue.py  storage.py
pytoon/api_orchestrator/: __init__.py  app.py  auth.py  planner.py  routes.py  spec_builder.py  validation.py
pytoon/assembler/: __init__.py  color_grading.py  ffmpeg_ops.py  pipeline.py  transitions.py
pytoon/audio_manager/: __init__.py  alignment.py  caption_renderer.py  mixer.py  (+5 more)
schemas/: render_spec_v1.json  scene_graph_v2.json  timeline_v2.json
tests/: conftest.py  test_60s.py  test_acceptance.py  test_core_flows.py  test_engine_policy.py  test_recovery.py  test_v2_e2e.py  test_v2_phase3.py  test_v2_phase4.py
(+37 files in other folders)
