[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytoon"
version = "1.0.0"
description = "Pytoon Render Engine — local-first short-form video generation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.29",
    "redis>=5.0.0",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    "python-multipart>=0.0.9",
    "pillow>=10.2.0",
    "httpx>=0.27.0",
    "aiofiles>=23.2.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
]

[project.scripts]
pytoon-api = "pytoon.api_orchestrator.app:app"
pytoon-worker = "pytoon.worker.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
